infra/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neobank
  labels:
    name: neobank
    environment: production
